Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
0.24
-
None
Description
ha_tests.ReplicationTests.test_auto_delete_failover sporadically dumps core.
This can be easily reproduced on RHEL5, but does not seem to be easy to reproduce on other platforms:
To reproduce: cd src/tests; source test_env.sh; while ha_tests.py *test_auto_delete_failover; do true; done; find -name core* Result: eventual failure with core dump aconway1@mrg29 debug (trunk $%)$ cd src/tests; source test_env.sh; while ha_tests.py *test_auto_delete_failover; do true; done; find -name core* ha_tests.ReplicationTests.test_auto_delete_failover .................................. fail Error during test: Traceback (most recent call last): File "/home/aconway1/qpid/debug/src/tests/python/commands/qpid-python-test", line 340, in run phase() File "/home/aconway1/qpid/qpid/cpp/src/tests/ha_tests.py", line 762, in test_auto_delete_failover cluster[i].wait_no_queue(q,timeout=2) # auto-deleted File "/home/aconway1/qpid/qpid/cpp/src/tests/ha_test.py", line 217, in wait_no_queue assert retry(lambda: agent.getQueue(queue) is None, timeout=timeout) File "/home/aconway1/qpid/qpid/cpp/src/tests/brokertest.py", line 88, in retry ret = function() File "/home/aconway1/qpid/qpid/cpp/src/tests/ha_test.py", line 217, in <lambda> assert retry(lambda: agent.getQueue(queue) is None, timeout=timeout) File "/home/aconway1/qpid/qpid/tools/src/py/qpidtoollibs/broker.py", line 183, in getQueue return self._getBrokerObject(Queue, "org.apache.qpid.broker:queue:%s" % name) File "/home/aconway1/qpid/qpid/tools/src/py/qpidtoollibs/broker.py", line 127, in _getBrokerObject obj = self._doNameQuery(oid) File "/home/aconway1/qpid/qpid/tools/src/py/qpidtoollibs/broker.py", line 101, in _doNameQuery correlator = self._sendRequest('_query_request', query) File "/home/aconway1/qpid/qpid/tools/src/py/qpidtoollibs/broker.py", line 77, in _sendRequest self.tx.send(message) File "<string>", line 6, in send File "/home/aconway1/qpid/debug/src/tests/python/qpid/messaging/endpoints.py", line 863, in send self._ecwait(lambda: self.linked, timeout=timeout) File "/home/aconway1/qpid/debug/src/tests/python/qpid/messaging/endpoints.py", line 50, in _ecwait result = self._ewait(lambda: self.closed or predicate(), timeout) File "/home/aconway1/qpid/debug/src/tests/python/qpid/messaging/endpoints.py", line 814, in _ewait result = self.session._ewait(lambda: self.error or predicate(), timeout) File "/home/aconway1/qpid/debug/src/tests/python/qpid/messaging/endpoints.py", line 580, in _ewait result = self.connection._ewait(lambda: self.error or predicate(), timeout) File "/home/aconway1/qpid/debug/src/tests/python/qpid/messaging/endpoints.py", line 219, in _ewait self.check_error() File "/home/aconway1/qpid/debug/src/tests/python/qpid/messaging/endpoints.py", line 212, in check_error raise e ConnectionError: connection aborted Totals: 1 tests, 0 passed, 0 skipped, 0 ignored, 1 failed ./ha_tests.tmp/ha_tests.ReplicationTests.test_auto_delete_failover/core.27906 Expected result: passes indefinitely