QPID-5454: Sporadic core dump in ha_tests.ReplicationTests.test_auto_delete_failover

Due to race condition Bridge::cancel using a deleted Connection object.
If the bridge is being cancelled because it is about to be created on
a new connection, then it should not attempt to send a cancel to the
remote peer since that connection is no longer valid.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1556966 13f79535-47bb-0310-9956-ffa450edef68